feat: calendar now autoupdates